k8s/infra/deploy--jeager-server.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jaeger-server
  namespace: eshop-infra
  labels:
    app: jaeger-server
    env: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jaeger-server
  template:
    metadata:
      labels:
        app: jaeger-server
        env: dev
    spec:
      containers:
        - name: jaeger-server
          image: jaegertracing/all-in-one:1.57
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              cpu: 200m
              memory: 512Mi
