k8s/infra/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: otel-collector
  namespace: eshop-infra
  labels:
    app.kubernetes.io/name: otel-collector
spec:
  selector:
    app: otel-collector
  ports:
    - protocol: TCP
      port: 4317
      targetPort: 4317
---
apiVersion: v1
kind: Service
metadata:
  name: jaeger-server
  namespace: eshop-infra
  labels:
    app.kubernetes.io/name: jaeger-server
spec:
  selector:
    app: jaeger-server
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 16686
    - name: grpc
      protocol: TCP
      port: 4317
      targetPort: 4317
