k8s/infra/ing.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jaeger-server-ingress
  namespace: eshop-infra
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: jaeger.eshop.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jaeger-server
                port:
                  number: 80
